<resources>
    <string name="language_code">en</string>
    <string name="app_name">GoodNews</string>
    <string name="menu_tip">Usage Tips</string>
	<string name="tag_read">Read</string>
    <string name="tag_starred">Starred</string>
    <string name="tag_readlist">Read list</string>
    <string name="tag_all">All items</string>
    <string name="pref_actions">Actions</string>
    <string name="pref_account">Google Reader Account</string>
    <string name="pref_account_summary">Select your Google account to be used to login to Google Reader</string>
	<string name="pref_sync">Synchronization</string>
    <string name="pref_sync_continous">Continous sync</string>
    <string name="pref_sync_continous_summary">The interval for a continous synchronization. Integration with Locale and Tasker is also available</string>
    <string name="pref_sync_continous_choice_title">Continous sync interval</string>
    <string name="pref_sync_continous_wifi_only">Only for Wifi</string>
    <string name="pref_sync_continous_wifi_only_summary">Perform the continous sync only when wireless LAN is connected</string>
	<string name="pref_sync_push_immediately">Immediate push</string>
	<string name="pref_sync_push_immediately_summary">Whether to push local changes immediately to Google Reader or only on synchronization</string>
    <string name="pref_sync_notify_unread">Notify unread items</string>
    <string name="pref_sync_notify_unread_summary">Notify when new unread articles are available after a sync</string>
	<string name="pref_sync_labels">Special tag names</string>
	<string name="pref_sync_labels_readlist">Read list</string>
	<string name="pref_sync_labels_readlist_summary">Name to be used for the tag that represents the read list</string>
    <string name="pref_sync_download">Article download &amp; caching</string>
	<string name="pref_sync_unread_max">Unread articles</string>
    <string name="pref_sync_unread_max_summary">Maximum number of unread articles to be downloaded</string>
    <string name="pref_sync_new_unread_only">New unread only</string>
    <string name="pref_sync_new_unread_only_summary">Only fetch unread articles newer than those from the last sync</string>
    <string name="pref_sync_unread_keeping_restrict">Limit unread number</string>
    <string name="pref_sync_unread_keeping_restrict_summary">Restrict number of locally available unread articles to download limit above. Dismiss older articles to keep the limit.</string>
    <string name="pref_sync_cleanup_unread_days">Limit unread age</string>
    <string name="pref_sync_cleanup_unread_days_summary">Maximum age in days for unread, untagged articles to be stored locally</string>
	<string name="pref_sync_tagged_max">Articles per tag</string>
	<string name="pref_sync_tagged_max_default_summary">Maximum number of read articles to be synced for each tag</string>
    <string name="pref_sync_cache_days">Days to cache</string>
    <string name="pref_sync_cache_days_summary">Minimum age of read, untagged articles to be removed from the cache</string>
	<string name="pref_sync_item_max_choice">Number of Items</string>
    <string name="pref_sync_fixes">Google Reader Fixes</string>
    <string name="pref_sync_fix_duplicate_items">Avoid duplicate articles</string>
    <string name="pref_sync_fix_duplicate_items_summary">Hides article duplicates and marks them as read. Duplicate articles may occur due to an error in Google Reader.</string>
    <string name="pref_sync_dismiss_local_changes">Dismiss local Changes</string>
    <string name="pref_sync_dismiss_local_changes_summary">Drop all local changes made to read state and tag assignments</string>
    <string name="pref_ui">User Interface</string>
    <string name="pref_look_and_feel">Look &amp; Feel</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_theme_summary">Choose your preferred style for the GoodNews user interface.</string>
    <string name="pref_actionbar_unsplit">Buttons in title bar</string>
    <string name="pref_actionbar_unsplit_summary">Force the action buttons to appear in the title bar instead of the bottom bar</string>
    <string name="pref_view_category_filtering_sorting">Filtering &amp; Sorting</string>
    <string name="pref_sort_strategy">Tag/subscription sorting</string>
    <string name="pref_sort_strategy_summary">Sort tags and subscriptions exactly as in Google Reader</string>
    <string name="pref_sort_strategy_choice_title">Sort strategy</string>
    <string name="pref_hide_read">Hide read items</string>
    <string name="pref_hide_read_summary">Hide read folders, subscriptions and articles in list</string>
    <string name="pref_hide_read_label_item_list">Hide read in tags</string>
    <string name="pref_hide_read_label_item_list_summary">Same as above when displaying an article list for a non-folder tag</string>
    <string name="pref_view_category_controls_behaviour">Controls &amp; Behaviour</string>
    <string name="pref_ui_other_close_empty_item_list">Close read list</string>
    <string name="pref_ui_other_close_empty_item_list_summary">Automatically go back if there are only read items in the list and you are hiding read items</string>
    <string name="pref_view_category_view">View</string>
    <string name="pref_notifications">Notifications</string>
    <string name="pref_notifications_list_sync_finished">Sync finished</string>
    <string name="pref_notifications_list_sync_finished_summary">Notification about a finished sync in the subscription and article list with option to reload list</string>
    <string name="pref_tag_list">Tag List</string>
    <string name="pref_folder_click_action">Folder click action</string>
    <string name="pref_folder_click_action_summary">The action to be performed when clicking a folder item. The button on the right performs the other action.</string>
    <string name="pref_folder_click_choice_title">Folder Click Action</string>
    <string name="pref_taglist_show_syncstatus">Show sync status</string>
    <string name="pref_taglist_show_syncstatus_summary">Whether to show the current sync status in the tag list</string>
    <string name="pref_taglist_show_starred">Show starred tag</string>
    <string name="pref_taglist_show_starred_summary">Whether to show the starred tag in the tag list</string>
    <string name="pref_taglist_show_readlist">Show read list tag</string>
    <string name="pref_taglist_show_readlist_summary">Whether to show the read list tag in the tag list</string>
    <string name="pref_taglist_show_allitems">Show all items tag</string>
    <string name="pref_taglist_show_allitems_summary">Whether to show the all items tag in the tag list</string>
    <string name="pref_feed_list">Subscription List</string>
    <string name="pref_item_list">Article List</string>
    <string name="pref_teaser">Teaser</string>
    <string name="pref_teaser_summary">Whether to display a short summary of an article in the list</string>
    <string name="pref_teaser_choice_title">Number of words</string>
    <string name="pref_teaser_generate">Generate teasers</string>
    <string name="pref_teaser_generate_summary">By default teasers will only be generated for newly synced articles. Use to generate for existing articles</string>
    <string name="pref_item_list_title_text_size">Title text size</string>
    <string name="pref_item_list_title_text_size_summary">Text size to be used for article titles</string>
    <string name="pref_item_list_title_text_size_choice_title">Title Text Size</string>
	<string name="pref_item_list_sort_order">Article sort order</string>
	<string name="pref_item_list_sort_order_summary">The order to sort articles in regarding their age</string>
    <string name="pref_item_list_sort_order_title">Article sort order</string>
    <string name="pref_group_folder_item_list">Group by feeds in folders</string>
    <string name="pref_group_folder_item_list_summary">Group articles by subscriptions when viewing a folder\'s article list</string>
    <string name="pref_group_label_item_list">Group by feeds in tags</string>
    <string name="pref_group_label_item_list_summary">Group articles by subscriptions when viewing a tag\'s article list</string>
    <string name="pref_item_list_offline_indicator_toggles_read_state">Offline indicator for read state</string>
    <string name="pref_item_list_offline_indicator_toggles_read_state_summary">Tapping the offline indicator toggles the article\'s read state</string>
    <string name="pref_labeling">Implicit Tagging</string>
    <string name="pref_labeling_mark_read_scrollover">Mark read on scroll over</string>
    <string name="pref_labeling_mark_read_scrollover_summary">Mark article read when scrolled out of top edge of the window</string>
    <string name="pref_labeling_mark_read_on_view">Mark read on view</string>
    <string name="pref_labeling_mark_read_on_view_summary">Mark article read when opening it in the article view</string>
    <string name="pref_labeling_mark_read_on_tag">Mark read on tag</string>
    <string name="pref_labeling_mark_read_on_tag_summary">Mark article read when starred or added to the read list in list view</string>
    <string name="pref_labeling_remove_readlist_on_view">Remove from read list</string>
    <string name="pref_labeling_remove_readlist_on_view_summary">Remove article from read list when opening it in the article view</string>
    <string name="pref_storage">Storage</string>
    <string name="pref_sync_cancel_on_low_device_storage">Cancel on low storage</string>
    <string name="pref_sync_cancel_on_low_device_storage_summary">Cancel the sync if device storage space is low</string>
    <string name="pref_storage_statistics">Storage Statistics</string>
    <string name="pref_storage_statistics_summary">Collects and shows storage statistics like number of articles, occupied storage space, etc.</string>
    <string name="pref_database_storage">Articles</string>
    <string name="pref_database_storage_provider">Database storage</string>
    <string name="pref_database_storage_provider_summary">EXPERIMENTAL: Do *not* use external storage if it is often not available (USB connection). GoodNews will crash if the database storage is not available.</string>
    <string name="pref_enforce_content_database_storage">Store content in database</string>
    <string name="pref_enforce_content_database_storage_summary">Stores summary and content in database instead of file system. (Only enable if you have a good reason for it)</string>
    <string name="pref_database_clean">Recreate database</string>
    <string name="pref_database_clean_summary">Deletes the database and recreates it</string>
    <string name="pref_content_storage_provider">Content storage</string>
    <string name="pref_content_storage_provider_summary">Select whether to store article content on internal device storage or memory card</string>
    <string name="pref_delete_unreferenced">Delete unused articles</string>
    <string name="pref_delete_unreferenced_summary">Deletes all read, untagged articles</string>
    <string name="pref_content_delete">Delete all content</string>
    <string name="pref_content_delete_summary">Delete all locally stored summaries, contents and images</string>
    <string name="pref_storage_provider_choice_title">Choose Storage</string>
    <string name="pref_app">App Info &amp; Support</string>
    <string name="pref_info">Information</string>
    <string name="pref_info_changelog">What\'s new?</string>
    <string name="pref_info_changelog_summary">Show the GoodNews changelog</string>
    <string name="pref_tips_auto_show">Show usage tips</string>
    <string name="pref_tips_auto_show_summary">Automatically show new usage tips. (all tips are always accessible through a view\'s menu)</string>
    <string name="pref_info_homepage">GoodNews Web Site</string>
    <string name="pref_info_homepage_summary">News, documentation and more about GoodNews</string>
</resources>