<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:title="@string/pref_ui">
    <PreferenceScreen android:title="@string/pref_feed_list"
                      android:fragment="com.gettingmobile.goodnews.settings.SettingsFragment">

        <PreferenceCategory android:title="@string/pref_view_category_filtering_sorting">
            <CheckBoxPreference
                    android:key="hide_read"
                    android:title="@string/pref_hide_read"
                    android:summary="@string/pref_hide_read_summary"
                    android:defaultValue="false"/>
            <ListPreference
                    android:key="sort_strategy"
                    android:title="@string/pref_sort_strategy"
                    android:summary="@string/pref_sort_strategy_summary"
                    android:dialogTitle="@string/pref_sort_strategy_choice_title"
                    android:entries="@array/pref_sort_strategy_choice"
                    android:entryValues="@array/pref_sort_strategy_choice_values"
                    android:defaultValue="1"/>
        </PreferenceCategory>

        <PreferenceCategory android:title="@string/pref_view_category_controls_behaviour">
            <CheckBoxPreference
                    android:key="ui_other_close_empty_item_list"
                    android:title="@string/pref_ui_other_close_empty_item_list"
                    android:summary="@string/pref_ui_other_close_empty_item_list_summary"
                    android:defaultValue="true"/>
        </PreferenceCategory>

        <PreferenceCategory
                android:title="@string/pref_notifications"
                android:key="notifications">
            <CheckBoxPreference
                    android:key="notifications_list_sync_finished"
                    android:title="@string/pref_notifications_list_sync_finished"
                    android:summary="@string/pref_notifications_list_sync_finished_summary"
                    android:defaultValue="true"/>
        </PreferenceCategory>

        <PreferenceCategory
            android:title="@string/pref_look_and_feel">
            <ListPreference
                    android:key="theme"
                    android:title="@string/pref_theme"
                    android:summary="@string/pref_theme_summary"
                    android:dialogTitle="@string/pref_theme"
                    android:entries="@array/pref_theme_choice"
                    android:entryValues="@array/pref_theme_choice_values"
                    android:defaultValue="WHITE"/>
            <CheckBoxPreference
                    android:key="actionbar_unsplit"
                    android:title="@string/pref_actionbar_unsplit"
                    android:summary="@string/pref_actionbar_unsplit_summary"
                    android:defaultValue="false"/>
        </PreferenceCategory>
    </PreferenceScreen>
</PreferenceScreen>
	